--- a/Tank/Tank.vcxproj
+++ b/Tank/Tank.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Configuration.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameOnject.cpp" />
     <ClCompile Include="GameStateManager.cpp" />
     <ClCompile Include="HeavyTank.cpp" />
     <ClCompile Include="Image.cpp" />
@@ -140,7 +141,6 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Configuration.h" />
-    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameState.h" />
